add reads to otel